--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
     "paths": {
-      "@Components/*": ["./*"]
+      "@Components/*": ["Components/*"]
     }
   }
 }
